// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new organization 1`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value=""
    />
    <button
      className="text-middle"
      disabled={true}
    >
      create
    </button>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;

exports[`creates new organization 2`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value="foo"
    />
    <i
      className="spinner"
    />
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;

exports[`creates new organization 3`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <button
      className="button-clean"
    >
      <i
        className="icon-delete"
      />
    </button>
  </form>
</NewOrganizationForm>
`;

exports[`deletes organization 1`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <button
      className="button-clean"
    >
      <i
        className="icon-delete"
      />
    </button>
  </form>
</NewOrganizationForm>
`;

exports[`deletes organization 2`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <i
      className="spinner"
    />
  </form>
</NewOrganizationForm>
`;

exports[`deletes organization 3`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value=""
    />
    <button
      className="text-middle"
      disabled={true}
    >
      create
    </button>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;
